objects/Professional_Service_Consumption__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Professional Service Consumption</relationshipLabel>
        <relationshipName>Professional_Service_Consumption</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours_consumed__c</fullName>
        <label>Hours consumed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <description>When were the professional services given</description>
        <label>Meeting Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Id__c</fullName>
        <externalId>true</externalId>
        <label>Meeting Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meeting_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Meeting_Id__c, &apos;Meeting&apos; )</formula>
        <label>Meeting Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Professional Service Consumption</label>
    <nameField>
        <displayFormat>PSC-{00000}</displayFormat>
        <label>Professional Service Consumption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Service Consumption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>